Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25849

Flickering with VisualItemModel+ListView when scrolling with keyboard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • Linux (Ubuntu 12.04 nvidia & AMD GPUs, Raspberry Pi)

      Using tip of qtdeclarative from around 19/05/12 on different Linux environments, the attached QML shows a rendering artifact when scrolling up and down with the keyboard cursors keys.

      The current item briefly flickers, especially when scrolling down, and there are problems with disappearing delegates at the top and bottom of the list.

      The problem does not happen with models other than VisualItemModel. Also the VisualItemModel.index attached property does not seem to work properly (all values are zero).

        1. focusbug.qml
          2 kB
          Andrew Baldwin
        For Gerrit Dashboard: QTBUG-25849
        # Subject Branch Project Status CR V

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            anbaldwi Andrew Baldwin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes